# claudius

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  JenkinsFile  Jenkinsfile  README.md  build.bat  build_jenkins.bat  debug_maya.bat  launch_maya.bat  release.py  requirements.txt  run_arnold.bat
modules/: FindArnold.cmake  FindMaya.cmake  FindMtoA.cmake
src/: CMakeLists.txt  main.cpp
src/extension/: CMakeLists.txt  ClaudiusVisualizerTranslator.cpp  ClaudiusVisualizerTranslator.h  Translator.cpp  Translator.h  extension.cpp
src/io/: CMakeLists.txt  main.cpp
src/io/io_lib/: CMakeLists.txt  CharBufferOperator.cpp  CharBufferOperator.h  Greeter.cpp  Greeter.h  ParticleContainer.cpp  ParticleContainer.h  ParticleReader.h  ParticleReaderFactory.cpp  ParticleReaderFactory.h  ProgressReporter.cpp  ProgressReporter.h  PtsParticleReader.cpp  PtsParticleReader.h  RemainingTimeCalculator.cpp  RemainingTimeCalculator.h
src/plugin/: CMakeLists.txt  ClaudiusVisualizer.cpp  ClaudiusVisualizer.h  ClaudiusVisualizerDrawOverride.cpp  ClaudiusVisualizerDrawOverride.h  PointCloudFileTranslator.cpp  PointCloudFileTranslator.h  claudius_template.mod  launch_maya_with_claudius_template.bat  plugin.cpp  pluginFootprint.cpp
src/plugin/module/scripts/claudius/: conversion.py  menu.py
src/procedural/: CMakeLists.txt  claudius_particles.cpp  point_instancer.cpp
src/utils/: CMakeLists.txt  version.cpp  version.h
test/: CMakeLists.txt  pointcloud_test.ass  stanford_bunny.ass  test.ass  testCharBufferOperator.cpp  testParticleContainer.cpp  testParticleReaderFactory.cpp  testPtsParticleReader.cpp
